--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     image: nginx:alpine
 
     ports:
-      - "81:8011"
       - "80:8012"
       - "443:443"
     volumes:
@@ -44,25 +43,10 @@ services:
     image: mysql:5.7
     command: "--innodb_use_native_aio=0"
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
-      - ./data/mysql/3307/:/var/lib/mysql/:rw
-      - ./conf/mysql/3307/my.cnf:/etc/mysql/conf.d/mysql.cnf:ro
-      - ./log/mysql/3307:/var/log/mysql/
+      - ./data/mysql/:/var/lib/mysql/:rw
+      - ./conf/mysql/my.cnf:/etc/mysql/conf.d/mysql.cnf:ro
+      - ./log/mysql:/var/log/mysql/
     environment:
-      MYSQL_ROOT_PASSWORD: "123456_master"
-
-  # ------------------
-  mysql_slave:
-    user: "mysql"
-    container_name: mysql-slave
-    image: mysql:5.7
-    command: "--innodb_use_native_aio=0"
-    ports:
-      - "3308:3306"
-    volumes:
-      - ./data/mysql/3308/:/var/lib/mysql/:rw
-      - ./conf/mysql/3308/my.cnf:/etc/mysql/conf.d/mysql.cnf:ro
-      - ./log/mysql/3308/:/var/log/mysql/
-    environment:
-      MYSQL_ROOT_PASSWORD: "123456_slave"
+      MYSQL_ROOT_PASSWORD: "123456"
