修改容器内容

--- a/conf/nginx/conf.d/test.conf
+++ b/conf/nginx/conf.d/test.conf
@@ -1,6 +1,6 @@
 server {
     listen       8012;
-    server_name  106.52.198.173;
+    server_name  test.ethanyep.cn;
 
     #charset koi8-r;
     access_log  /var/log/nginx/default.access.log  main;
