--- a/conf/nginx/conf.d/blog.conf
+++ b/conf/nginx/conf.d/blog.conf
@@ -2,9 +2,9 @@ server {
   listen 443 ssl;
   listen 8012;
   server_name blog.ethanyep.cn www.54zm.com 54zm.com;
-  access_log  /var/log/nginx/blog.ethanyep.cn.access.log;
+  access_log  /var/log/nginx/blog.access.log;
   index index.html index.htm index.php;
-  root /var/www/site/blog.ethanyep.cn/public/;
+  root /var/www/site/blog/public/;
 
   #error_page 404 /404.html;
   #error_page 502 /502.html;
