服务器提交

--- a/conf/nginx/conf.d/ethanyep.cn.conf
+++ b/conf/nginx/conf.d/ethanyep.cn.conf
@@ -15,15 +15,15 @@ server {
   ssl_session_timeout 5m;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
+  #rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+  
   location / {
       try_files $uri $uri/ /index.php?$args;
   }
-  rewrite /wp-admin$ $scheme://$host$uri/ permanent;
-
 
   location ~ [^/]\.php(/|$) {
     #fastcgi_pass remote_php_ip:9000;
-    fastcgi_pass  php:9000;
+    fastcgi_pass  xw_php:9000;
     fastcgi_index index.php;
     include fastcgi.conf;
   }
